RenderLayerBacking::startAnimation() return value has incorrect semantic

This CL is based on Shawn Singh's work: webkit.org/b/94993

RenderLayerBacking::startAnimation() was returning true whenever
*any* property of an animation was accepted for accelerated
animation by the compositor. However, the rest of the code outside
this was using the return value to indicate that *all* properties
were accepted for accelerated animation.

BUG=143658
TEST=compositing/animation/two-properties-in-keyframed-animation.html

Review URL: https://chromiumcodereview.appspot.com/24198009

git-svn-id: svn://svn.chromium.org/blink/trunk@158325 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 8e49465e564f2701ede15c84574b140dcd38e339